--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    
+    "build:css": "tailwindcss -i ./src/input.css -o ./src/output.css --minify",
+    "build": "npm run build:css && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
